# codefmt

./: Cargo.toml  LICENSE  README.md  languages.toml
.github/workflows/: release.yml
src/: code_blocks.rs  config.rs  format.rs  main.rs
