[package]
name = "codefmt"
description = "a markdown code block formatter"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
memchr = "2.7.5"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
toml = "0.9.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
